[project]
name = "csv-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "ujson>=5.11.0",
]
